--- a/machine_learning_project.Rmd
+++ b/machine_learning_project.Rmd
@@ -2,7 +2,10 @@
 title: "Practical Machine Learning Project"
 author: "Sankar"
 date: "25/06/2020"
-output: html_document
+output:
+  html_document:
+    keep_md: true
+  pdf_document: default
 ---
 
 ```{r setup, include=FALSE}
@@ -25,6 +28,7 @@ library(dplyr)
 library(parallel)
 library(doParallel)
 library(rattle)
+library(corrplot)
 train_set = read.csv("pml-training.csv")
 test_set = read.csv("pml-testing.csv")
 
@@ -82,6 +86,19 @@ new_test_set = na.omit(new_test_set)
 
 ```
 
+## Correlation between Dataset variables
+
+```{r correlation_plot}
+
+col_no_train = ncol(training_set_reqd)
+correlation = cor(training_set_reqd[, -col_no_train])
+corrplot(correlation, order = "FPC", method = "color", type = "upper", 
+         tl.cex = 0.8, tl.col = rgb(0, 0, 0))
+
+```
+
+The points in the plot with the dark color shows higher correlation than the ones with the light colors. 
+
 ## Model Training and Prediction
 
 This is the very important step of the machine learning process, i.e., the model training. For this process, the **"Random Forest"** method is selected for performing the training function and this step is performed by parallel computation to reduce the amount of time required for performing the operation. The trained model is then saved into a new variable which is then used for predicting the values for other dataset.  
@@ -106,11 +123,13 @@ Now, the predicted values are checked with the values present in the validation 
 
 ```{r confusionMatrix_check}
 
-confusionMatrix(predicted_values_valid, validation_set_reqd[, "classe"])
+cfmat = confusionMatrix(predicted_values_valid, validation_set_reqd[, "classe"])
+cfmat
+plot(cfmat$table, col = cfmat$byClass, main = paste("Random Forest Confusion Matrix: Accuracy =", round(cfmat$overall['Accuracy'], 4)))
 
 ```
 
-It is found that the accuracy of the trained model is more than 99%.  
+It is found that the accuracy of the trained model is more than 0.9953 which implies that the out of sample error is very less i.e., 0.0047.   
 
 ## Test Values Prediction
 
